fix loading layout shift

--- a/src/components/pages/liquidity-page/components/Boosts/BoostsRewards/BoostsRewards.module.css
+++ b/src/components/pages/liquidity-page/components/Boosts/BoostsRewards/BoostsRewards.module.css
@@ -60,6 +60,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  height: 25px;
 }
 
 .rewardsValue p {
